fixed gap on page header

--- a/src/style.css
+++ b/src/style.css
@@ -46,7 +46,7 @@ body, div#app {
 
 h1 {
   color: var(--text-color);
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   font-weight: 200;
 }
 
